--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
               </h3>
               <p class="service__description">Integrations & Queries</p>
               <ul aria-label="Data Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 20px" src="img/skyvia.png" width="75%"/></a></li>
-                <li class="service__list__item">Building Pipelines</li>
+                <li class="service__list__item"><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 20px" src="img/skyvia.png" width="45%"/></a></li>
+                <li class="service__list__item">Building Data Pipelines</li>
               </ul>
             </section>
           </div>
@@ -128,7 +128,7 @@
               </h3>
               <p class="service__description">Controllers, Actuators & Sensors</p>
               <ul aria-label="Telemetry Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 20px" src="img/raspberrypi_logo.svg" width="10%"/></a></li>
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 20px" src="img/raspberrypi_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
               </ul>
             </section>
@@ -144,7 +144,7 @@
               </h3>
               <p class="service__description">Gift Cards/Vouchers</p>
               <ul aria-label="Machine Learning Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" rel="nofollow"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style="padding-top: 20px; padding-bottom: 20px" width="90%"/></br></a></li>
+                <li class="service__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" rel="nofollow"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style="padding-top: 20px; padding-bottom: 20px" width="45%"/></br></a></li>
                 <li class="service__list__item">Building Prepaid Experiences</li>
               </ul>
             </section>
