--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Facebook/Twitter Sharing -->
     <meta property="og:title" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/18683650?v=4" />
-    <meta property="og:description" content="I build workflow automations to help startups, enterprises and entrepreneurs connect data and applications across the internet to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars." />
+    <meta property="og:description" content="I build workflow automations to help startups and entrepreneurs connect apps, data and Internet of Things across the web to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars." />
       <!-- Twitter Sharing  -->
     <meta name="twitter:card" content="summary"/>
     <!-- Pinterest Sharing  -->
@@ -46,7 +46,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">always creative THINKING different</p>
-      <p class="about__text">I build workflow automations to help entrepreneurs, startups and organisations connect people, applications, data and internet of things across the internet to - Automate repetitive tasks; and Control devices. Minimising human error; and Reclaiming countless hours - Saving thousands of dollars.</p>
+      <p class="about__text">I build workflow automations to help startups and entrepreneurs connect apps, data and Internet of Things across the web to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars.</p>
     
       <div >
       <ul class="social-share-btns">
