--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Facebook/Twitter Sharing -->
     <meta property="og:title" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/18683650?v=4" />
-    <meta property="og:description" content="I build workflow automations to help startups and entrepreneurs connect apps, data and Internet of Things across the web to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars." />
+    <meta property="og:description" content="I build workflow automations to help startups and entrepreneurs connect apps, data and internet of things across the web to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars." />
       <!-- Twitter Sharing  -->
     <meta name="twitter:card" content="summary"/>
     <!-- Pinterest Sharing  -->
@@ -38,7 +38,7 @@
       <div class="hero__body">
         <h2 class="hero__subheading">👋 Hello, I’m Arnold Tonderai Marunda.</h2>
         <div class="hero__text">
-          <p class="hero__intro">✝️ Follower of Christ Jesus. ♂♀ Married - Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. </br>💻 Solopreneur<small>(Development & IT)</small>.</p>
+          <p class="hero__intro">✝️ Follower of Christ Jesus. ♂♀ Married - Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. </br>💻 Solopreneur<small>(Workflow Automation Expert)</small>.</p>
         </div>
       </div>
     </section>
@@ -46,7 +46,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">always creative THINKING different</p>
-      <p class="about__text">I build workflow automations to help startups and entrepreneurs connect apps, data and Internet of Things across the web to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars.</p>
+      <p class="about__text">I build workflow automations to help startups and entrepreneurs connect apps, data and internet of things across the web to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars.</p>
     
       <div >
       <ul class="social-share-btns">
@@ -112,7 +112,7 @@
               </h3>
               <p class="service__description">Integrations & Queries</p>
               <ul aria-label="Data Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 20px" src="img/skyvia.png" width="45%"/></a></li>
+                <li class="service__list__item"><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 20px" src="img/skyvia.png" width="65%"/></a></li>
                 <li class="service__list__item">Building Data Pipelines</li>
               </ul>
             </section>
