--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   <span class="service__heading__content__text">Data<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">2-Way Synchronisations & Queries</p>
+              <p class="service__description">Data Synchronisations & Queries</p>
               <ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/skyvia.png" width="65%"/></a></li>
                 <li class="service__list__item">Building Data Pipelines</li>
@@ -123,13 +123,13 @@
             <section aria-label="2" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Prepayment<br>Automations</span>
+                  <span class="service__heading__content__text">e-Commerce<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">Gift Cards & Vouchers</p>
-              <ul aria-label="Machine Learning Automation" class="service__list" role="list">
+              <p class="service__description">eGift Cards & Vouchers</p>
+              <ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" rel="nofollow"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style="padding-top: 20px; padding-bottom: 20px" width="45%"/></br></a></li>
-                <li class="service__list__item">Building Prepaid Experiences</li>
+                <li class="service__list__item">Building Prepaid e-Commerce Experiences</li>
               </ul>
             </section>
           </div>
