--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </h3>
               <p class="service__description">Data Synchronisations & Queries</p>
               <ul aria-label="Data Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/skyvia.png" width="65%"/></a></li>
+                <li class="service__list__item"><a href="https://skyvia.com/data-integration/synchronization" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/skyvia.png" width="65%"/></a></li>
                 <li class="service__list__item">Building Data Pipelines</li>
               </ul>
             </section>
