--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
       <div class="contact__layout">
         <div class="contact__layout__column contact__layout__column--left">
           <address aria-labelledby="contact__heading">
-            <!-- <a class="contact__external-link" href="https://github.com/arnoldtonderaimarunda"><i class="fa fa-github-square fa-2x"></i><span class="invisible">View my GitHub profile</span></a> -->
+            <a class="contact__external-link" href="https://github.com/arnoldtonderaimarunda"><i class="fa fa-github-square fa-2x"></i><span class="invisible">View my GitHub profile</span></a>
+            <a class="contact__external-link" href="https://pph.me/arnoldmarunda"><i class="fa fa-github-square fa-2x"></i><span class="invisible">View my PeoplePerHour profile</span></a>
             <p class="contact__address"><span class="invisible">Visit us in person at </span>3 Kurrichane Way, Lichendale, Mandara,<br>HARARE, Zimbabwe</p>
           </address>
         </div>
