--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <div class="contact__layout__column contact__layout__column--left">
           <address aria-labelledby="contact__heading">
             <a class="contact__external-link" href="https://github.com/arnoldtonderaimarunda"><i class="fa fa-github-square fa-2x"></i><span class="invisible">View my GitHub profile</span></a>
-            <a class="contact__external-link" href="https://www.linkedin.com/in/arnold-tonderai-marunda-8a7512268/"><i class="fa-brands fa-linkedin"></i><span class="invisible">View my LinkedIn profile</span></a>
+            <a class="contact__external-link" href="https://www.linkedin.com/in/arnold-tonderai-marunda-8a7512268/"><i class="fa fa-brands fa-linkedin"></i><span class="invisible">View my LinkedIn profile</span></a>
             <p class="contact__address"><span class="invisible">Visit us in person at </span>3 Kurrichane Way, Lichendale, Mandara,<br>HARARE, Zimbabwe</p>
           </address>
         </div>
