--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <script src="https://use.fontawesome.com/c03127b13b.js"></script>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+   <!--  <script src="https://use.fontawesome.com/c03127b13b.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
   </head>
@@ -246,7 +248,7 @@
         <div class="contact__layout__column contact__layout__column--left">
           <address aria-labelledby="contact__heading">
             <a class="contact__external-link" href="https://github.com/arnoldtonderaimarunda"><i class="fa fa-github-square fa-2x"></i><span class="invisible">View my GitHub profile</span></a>
-            <a class="contact__external-link" href="https://www.linkedin.com/in/arnold-tonderai-marunda-8a7512268/"><i class="fa fa-brands fa-linkedin"></i><span class="invisible">View my LinkedIn profile</span></a>
+            <a class="contact__external-link" href="https://www.linkedin.com/in/arnold-tonderai-marunda-8a7512268/"><i class="fa-brands fa-linkedin"></i><span class="invisible">View my LinkedIn profile</span></a>
             <p class="contact__address"><span class="invisible">Visit us in person at </span>3 Kurrichane Way, Lichendale, Mandara,<br>HARARE, Zimbabwe</p>
           </address>
         </div>
