--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
             <section aria-label="RFP">
 
               <h3 class="project__name">But, I can still automate your task.</h3>
-               <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a job briefing session</a>
-               <a class="button__click" href="https://www.trustpilot.com/review/arnold.workflowautomation.expert">View client job reviews</a>
+               <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a briefing session</a>
+               <a class="button__click" href="https://www.trustpilot.com/review/arnold.workflowautomation.expert">View client project reviews</a>
                             <!--
               <p class="project__description">Please outline your work request and expectation below.</p>
 
@@ -235,8 +235,8 @@
     </section>
  
     <section aria-labelledby="clients__heading" id="clients">
-      <h2 class="clients__heading" id="clients__heading">Recommended</h2>
-      <p class="about__text">Technologies that I like and use. <b class="message" style="color:#7713fe;"></b></p>
+      <h2 class="clients__heading" id="clients__heading">Interesting</h2>
+      <p class="about__text">Products that I like. <b class="message" style="color:#7713fe;"></b></p>
       <ul aria-labelledby="clients__heading" class="clients__list" role="list">
          <li class="clients__list__item"><a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank"><img src="https://media.go2speed.org/brand/files/surfshark/926/Surfshark_pos_96px.png" style=" width:90%" alt="surfsharkVPN" border="0" /></a><p class="project__name">Improve your online security & privacy with the award-winning <a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank">Surfshark VPN</a>.</p><img src="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085" width="0" height="0" style="position:absolute;visibility:hidden;" border="0" /></li> 
        </ul>
