--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <div class="hero__header" itemprop="image">
         <h1 class="hero__heading" id="hero__heading">Arnold™ | Workflow Automation Expert</h1>
         <div id="expertStatus"></div>
+        <div>
+           <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a briefing session</a>
+        </div>
       </div>
 
       <div class="hero__body">
