--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 class="hero__heading" id="hero__heading">Arnold™ | Workflow Automation Expert</h1>
         <div id="expertStatus"></div>
         <div>
-           <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a briefing session</a>
+           <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a free consulting session</a>
         </div>
       </div>
 
@@ -190,7 +190,7 @@
             <section aria-label="RFP">
 
               <h3 class="project__name">But, I can still automate your task.</h3>
-               <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a briefing session</a>
+               <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a free consulting session</a>
                <a class="button__click" href="https://www.trustpilot.com/review/arnold.workflowautomation.expert">View client project reviews</a>
                             <!--
               <p class="project__description">Please outline your work request and expectation below.</p>
