--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <span class="service__heading__content__text">e-Commerce<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">eGift Cards & Vouchers</p>
+              <p class="service__description">Sell, Send & Redeem eGift Cards</p>
               <ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" rel="nofollow"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style="padding-top: 20px; padding-bottom: 20px" width="45%"/></br></a></li>
                 <li class="service__list__item">Building Prepaid e-Commerce Experiences</li>
