--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
 
     <section aria-labelledby="clients__heading" id="clients">
       <h2 class="clients__heading" id="clients__heading">Like</h2>
-      <h3 class="project__name>Products & Technologies I use to...</h3>
+      <h3 class="project__name">Products & Technologies I use to...</h3>
       <ul aria-labelledby="clients__heading" class="clients__list" role="list">
          <!-- <li class="clients__list__item"><a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank"><img src="https://media.go2speed.org/brand/files/surfshark/926/Surfshark_pos_96px.png" style=" width:90%" alt="surfsharkVPN" border="0" /></a><p class="project__name">Improve your online security & privacy with the award-winning <a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank">Surfshark VPN</a>.</p><img src="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085" width="0" height="0" style="position:absolute;visibility:hidden;" border="0" /></li>--> 
-       <li class="clients__list__item"><a href="https://www.ruby-lang.org/en/" target="_blank"><img src="img/ruby_logo.svg" style=" width:10%" alt="Ruby Programming Language" border="0" />Ruby Programming Language</a>
+       <li class="clients__list__item"><a href="https://www.ruby-lang.org/en/" target="_blank"><img src="img/ruby_logo.svg" style=" width:10%" alt="Ruby Programming Language" border="0" /></b>Ruby Programming Language</a>
       </ul>
     </section>
 
