--- a/index.html
+++ b/index.html
@@ -246,8 +246,10 @@
             <ul aria-labelledby="clients__heading" class="clients__list" role="list">
                <!-- <li class="clients__list__item"><a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank"><img src="https://media.go2speed.org/brand/files/surfshark/926/Surfshark_pos_96px.png" style=" width:90%" alt="surfsharkVPN" border="0" /></a><p class="project__name">Improve your online security & privacy with the award-winning <a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank">Surfshark VPN</a>.</p><img src="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085" width="0" height="0" style="position:absolute;visibility:hidden;" border="0" /></li>--> 
               <!-- <li class="clients__list__item"><a href="https://www.ruby-lang.org/en/" target="_blank"><img src="img/ruby_logo.svg" style=" width:20%" alt="Ruby Programming Language" border="0" /></a> -->
-            </ul>
+              </ul>
             </section>
+          </div>
+          <div class="projects__projects-layout__column">
            <section aria-label="Project">    
             <h3 class="project__name">Build & Support</h3>
             <ul aria-labelledby="clients__heading" class="clients__list" role="list">
@@ -255,6 +257,8 @@
               <!-- <li class="clients__list__item"><a href="https://www.ruby-lang.org/en/" target="_blank"><img src="img/ruby_logo.svg" style=" width:20%" alt="Ruby Programming Language" border="0" /></a> -->
             </ul>
             </section>
+          </div>
+          <div class="projects__projects-layout__column">
             <section aria-label="Project">    
             <h3 class="project__name">Learn & Teach</h3>
             <ul aria-labelledby="clients__heading" class="clients__list" role="list">
@@ -262,9 +266,8 @@
               <!-- <li class="clients__list__item"><a href="https://www.ruby-lang.org/en/" target="_blank"><img src="img/ruby_logo.svg" style=" width:20%" alt="Ruby Programming Language" border="0" /></a> -->
             </ul>
             </section>
-           </div>
+          </div>
          </div>
-       </div>
     </section>
 
   
