--- a/index.html
+++ b/index.html
@@ -237,14 +237,14 @@
 
 
     <section aria-labelledby="what-we-do__heading" id="what-we-do">
-      <h2 class="what-we-do__heading" id="what-we-do__heading">Like</h2>
+      <h2 class="what-we-do__heading" id="what-we-do__heading">Enable</h2>
 
       <div class="what-we-do__services-layout">
         <div class="what-we-do__services-layout__row">
-        <h3 class="project__name">Tools I use to...</h3>
+        <h3 class="project__name">Tools used to...</h3>
        <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
-              <h3 class="project__name">Live & Serve</h3>
+              <h3 class="project__name">Live+Serve</h3>
               <ul aria-label="Live and Worship" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://nlt.to" target="_blank" rel="nofollow"><img src="img/nlt_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://bibleproject.com/" target="_blank" rel="nofollow"><img src="img/bibleproject_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
@@ -255,7 +255,7 @@
           
           <div class="what-we-do__services-layout__column">
             <section aria-label="3" class="service">
-              <h3 class="project__name">Learn & Teach</h3>
+              <h3 class="project__name">Learn+Teach</h3>
               <ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://bing.com" target="_blank" rel="nofollow"><img src="/img/bing_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></br></a></li>
                 <li class="service__list__item"><a href="https://learn.saylor.org" target="_blank" rel="nofollow"><img src="img/saylor_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
@@ -278,7 +278,7 @@
           
           <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
-              <h3 class="project__name">Build & Support</h3>
+              <h3 class="project__name">Build+Support</h3>
               <ul aria-label="Build and Support" class="service__list" role="list">
 		<li class="service__list__item"><a href="https://pph.me/arnoldmarunda" target="_blank" rel="nofollow"><img  src="img/pph_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
                 <li class="service__list__item"><a href="https://ruby-lang.org" target="_blank" rel="nofollow"><img  src="img/ruby_logo.svg" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
