--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
       <div class="what-we-do__services-layout">
         <div class="what-we-do__services-layout__row">
-        <h3 class="project__name">Tools used to...</h3>
+        <h3 class="project__name">Recommended tools to...</h3>
        <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
               <h3 class="project__name">Live+Serve</h3>
