--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <span class="service__heading__content__text">Data<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">SQL Queries & Bi-Directional Integrations</p>
+              <p class="service__description">Bi-Directional Integrations</p>
               <ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/skyvia.png" width="65%"/></a></li>
                 <li class="service__list__item">Building Reliable Data Pipelines</li>
