--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
               <ul aria-label="Live and Worship" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://nlt.to" target="_blank" rel="nofollow"><img src="img/nlt_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://bibleproject.com" target="_blank" rel="nofollow"><img src="img/bibleproject_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-                <li class="service__list__item"><a href="https://langham.org/?no_redirect" target="_blank" rel="nofollow"><img src="img/langham_logo.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+                <li class="service__list__item"><a href="https://langhampreaching.org" target="_blank" rel="nofollow"><img src="img/langham_logo.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
               </ul>
             </section>
           </div>
