--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <p class="service__description">Forms, Tables & Webhooks</p>
               <ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 20px" src="img/zapier_logo.png" width="50%"/></a></li>
-                <li class="service__list__item">Building Optimised Business Processes</li>
+                <li class="service__list__item">Building optimised business processes</li>
               </ul>
             </section>
           </div>
@@ -130,10 +130,10 @@
                   <span class="service__heading__content__text">Data<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">Bi-Directional Integrations</p>
+              <p class="service__description">Clients, Servers, Database & APIs</p>
               <ul aria-label="Data Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/skyvia.png" width="65%"/></a></li>
-                <li class="service__list__item">Building Reliable Data Pipelines</li>
+                <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/anvil_logo.svg" width="65%"/></a></li>
+                <li class="service__list__item">Building reliable web apps</li>
               </ul>
             </section>
           </div>
@@ -143,13 +143,13 @@
             <section aria-label="3" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">e-Commerce<br>Automations</span>
+                  <span class="service__heading__content__text">Telemetry<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">Sell, Send & Redeem eGift Cards</p>
+              <p class="service__description">Actuators, Sensors & Controllers</p>
               <ul aria-label="e-Commerce Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" rel="nofollow"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style="padding-top: 20px; padding-bottom: 20px" width="45%"/></br></a></li>
-                <li class="service__list__item">Building Prepaid e-Commerce Experiences</li>
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 20px; padding-bottom: 20px" width="45%"/></br></a></li>
+                <li class="service__list__item">Building Internet of Things</li>
               </ul>
             </section>
           </div>
@@ -286,9 +286,7 @@
 		<li class="service__list__item"><a href="https://pph.me/arnoldmarunda" target="_blank" rel="nofollow"><img  src="img/pph_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
                  <li class="service__list__item"><a href="https://python.org" target="_blank" rel="nofollow"><img  src="img/python_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
                 <li class="service__list__item"><a href="https://micropython.org" target="_blank" rel="nofollow"><img  src="img/micropython_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
-                <li class="service__list__item"><a href="https://raspberrypi.com" target="_blank" rel="nofollow"><img  src="img/raspberrypi_logo.svg" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
                 <li class="service__list__item"><a href="https://waveshare.com" target="_blank" rel="nofollow"><img  src="img/waveshare_logo.png" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
-                <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img  src="img/anvil_logo.svg" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 		<li class="service__list__item"><a href="https://surfshark.com" target="_blank" rel="nofollow"><img  src="img/surfshark_logo.png" width="17%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 		<li class="service__list__item"><a href="https://github.com" target="_blank" rel="nofollow"><img  src="img/github_logo.svg" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 		<li class="service__list__item"><a href="https://postman.com" target="_blank" rel="nofollow"><img  src="img/postman_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
