--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <span class="service__heading__content__text">Telemetry<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">Actuators, Sensors & Controllers</p>
+              <p class="service__description">Controllers, Sensors & Transducers</p>
               <ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
