--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           <div class="what-we-do__services-layout__column">
             <section aria-label="3" class="service">
               <h3 class="project__name">Learn+Teach</h3>
-              <ul aria-label="e-Commerce Automation" class="service__list" role="list">
+              <ul aria-label="Learn and Teach" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://bing.com" target="_blank" rel="nofollow"><img src="/img/bing_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></br></a></li>
                 <li class="service__list__item"><a href="https://learn.saylor.org" target="_blank" rel="nofollow"><img src="img/saylor_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://www.aop.com/curriculum/horizons" target="_blank" rel="nofollow"><img src="img/aop_logo.svg" width="20%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
@@ -282,7 +282,7 @@
           <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
               <h3 class="project__name">Build+Support</h3>
-		<ul>
+	        <ul aria-label="Build and Support" class="service__list" role="list">
                  <li class="service__list__item"><a href="https://python.org" target="_blank" rel="nofollow"><img  src="img/python_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
                 <li class="service__list__item"><a href="https://micropython.org" target="_blank" rel="nofollow"><img  src="img/micropython_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
                 <li class="service__list__item"><a href="https://waveshare.com" target="_blank" rel="nofollow"><img  src="img/waveshare_logo.png" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
