--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
                 <li class="service__list__item"><a href="https://nlt.to" target="_blank" rel="nofollow"><img src="img/nlt_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://bibleproject.com" target="_blank" rel="nofollow"><img src="img/bibleproject_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
 		<li class="service__list__item"><a href="https://www.gotquestions.org" target="_blank" rel="nofollow"><img src="img/gotquestions_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>      
-                 <li class="service__list__item"><a href="https://langhampreaching.org" target="_blank" rel="nofollow"><img src="img/langham_logo.png" width="40%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+                <li class="service__list__item"><a href="https://langhampreaching.org" target="_blank" rel="nofollow"><img src="img/langham_logo.png" width="40%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+		<li class="service__list__item"><a href="https://www.thegospelcoalition.org/courses" target="_blank" rel="nofollow"><img src="img/tbc_logo.webp" width="40%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
 	      </ul>
             </section>
           </div>
