--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <span class="service__heading__content__text">Data<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">Clients, Servers, Database & APIs</p>
+              <p class="service__description">Clients, Servers, Databases & APIs</p>
               <ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 5px; padding-bottom: 10px" src="img/anvil_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building reliable web apps</li>
