--- a/index.html
+++ b/index.html
@@ -286,9 +286,8 @@
 	        <ul aria-label="Build and Support" class="service__list" role="list">
                  <li class="service__list__item"><a href="https://python.org" target="_blank" rel="nofollow"><img  src="img/python_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
                 <li class="service__list__item"><a href="https://micropython.org" target="_blank" rel="nofollow"><img  src="img/micropython_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
-		<li class="service__list__item"><a href="https://surfshark.com" target="_blank" rel="nofollow"><img  src="img/surfshark_logo.png" width="17%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
+		<li class="service__list__item"><a href="https://dataplicity.com" target="_blank" rel="nofollow"><img  src="img/dataplicity_logo.png" width="17%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 		<li class="service__list__item"><a href="https://github.com" target="_blank" rel="nofollow"><img  src="img/github_logo.svg" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
-		<li class="service__list__item"><a href="https://postman.com" target="_blank" rel="nofollow"><img  src="img/postman_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 	         </ul>
             </section>
           </div>  
