--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
           
           <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
-              <h3 class="project__name">Build+Support</h3>
-	        <ul aria-label="Build and Support" class="service__list" role="list">
+              <h3 class="project__name">Build+Develop</h3>
+	        <ul aria-label="Build and Develop" class="service__list" role="list">
                  <li class="service__list__item"><a href="https://python.org" target="_blank" rel="nofollow"><img  src="img/python_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
                 <li class="service__list__item"><a href="https://micropython.org" target="_blank" rel="nofollow"><img  src="img/micropython_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 		<li class="service__list__item"><a href="https://dataplicity.com" target="_blank" rel="nofollow"><img  src="img/dataplicity_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
