--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                   <span class="service__heading__content__text">Process<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">Forms, Tables & Webhooks</p>
+              <p class="service__description">Forms, Tables & Servers</p>
               <ul aria-label="Process Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 20px" src="img/zapier_logo.png" width="50%"/></a></li>
-                <li class="service__list__item">Building optimised business processes</li>
+                <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 5px; padding-bottom: 10px" src="img/anvil_logo.svg" width="20%"/></a></li>
+                <li class="service__list__item">Building optimised business apps</li>
               </ul>
             </section>
           </div>
@@ -132,10 +132,10 @@
                   <span class="service__heading__content__text">Data<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">Clients, Servers, Databases & APIs</p>
+              <p class="service__description">Databases, Filesystems & API Endpoints</p>
               <ul aria-label="Data Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 5px; padding-bottom: 10px" src="img/anvil_logo.svg" width="20%"/></a></li>
-                <li class="service__list__item">Building reliable web apps</li>
+                <li class="service__list__item"><a href="https://airbyte.com" target="_blank" rel="nofollow"><img style="padding-top: 5px; padding-bottom: 10px" src="img/airbyte_logo.svg" width="20%"/></a></li>
+                <li class="service__list__item">Building reliable data pipelines</li>
               </ul>
             </section>
           </div>
@@ -252,8 +252,7 @@
                 <li class="service__list__item"><a href="https://bibleproject.com" target="_blank" rel="nofollow"><img src="img/bibleproject_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
 		<li class="service__list__item"><a href="https://www.gotquestions.org" target="_blank" rel="nofollow"><img src="img/gotquestions_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>      
                 <li class="service__list__item"><a href="https://langhampreaching.org" target="_blank" rel="nofollow"><img src="img/langham_logo.png" width="40%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-		<li class="service__list__item"><a href="https://www.thegospelcoalition.org/courses" target="_blank" rel="nofollow"><img src="img/tgc_logo.webp" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-	      </ul>
+		</ul>
             </section>
           </div>
           
@@ -286,7 +285,6 @@
 	        <ul aria-label="Build and Develop" class="service__list" role="list">
                  <li class="service__list__item"><a href="https://python.org" target="_blank" rel="nofollow"><img  src="img/python_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
                 <li class="service__list__item"><a href="https://micropython.org" target="_blank" rel="nofollow"><img  src="img/micropython_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
-		<li class="service__list__item"><a href="https://dataplicity.com" target="_blank" rel="nofollow"><img  src="img/dataplicity_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 		<li class="service__list__item"><a href="https://github.com" target="_blank" rel="nofollow"><img  src="img/github_logo.svg" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 	         </ul>
             </section>
