--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <p class="service__description">Forms, Tables & Servers</p>
               <ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 5px; padding-bottom: 10px" src="img/anvil_logo.svg" width="20%"/></a></li>
-                <li class="service__list__item">Building optimised business apps</li>
+                <li class="service__list__item">Building optimised mobile web apps</li>
               </ul>
             </section>
           </div>
@@ -132,7 +132,7 @@
                   <span class="service__heading__content__text">Data<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">Databases, Filesystems & API Endpoints</p>
+              <p class="service__description">API Endpoints, Databases & Filesystems</p>
               <ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://airbyte.com" target="_blank" rel="nofollow"><img style="padding-top: 5px; padding-bottom: 10px" src="img/airbyte_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building reliable data pipelines</li>
