--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <p class="service__description">Forms, Tables & Servers</p>
               <ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 5px; padding-bottom: 10px" src="img/anvil_logo.svg" width="20%"/></a></li>
-                <li class="service__list__item">Building optimised mobile web apps</li>
+                <li class="service__list__item">Building intuitive mobile web apps</li>
               </ul>
             </section>
           </div>
