--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Facebook/Twitter Sharing -->
     <meta property="og:title" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/18683650?v=4" />
-    <meta property="og:description" content="I build workflow automations to help startups and entrepreneurs connect apps, data and internet of things across the web to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars." />
+    <meta property="og:description" content="I build workflow automations with open-source tools that help startups and entrepreneurs connect apps, data and internet of things across the web to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars." />
       <!-- Twitter Sharing  -->
     <meta name="twitter:card" content="summary"/>
     <!-- Pinterest Sharing  -->
