--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">always creative THINKING different</p>
-      <p class="about__text">I build workflow automations to help startups and entrepreneurs connect apps, data and internet of things across the web to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars.</p>
+      <p class="about__text">I build workflow automations with open-source tools that help startups and entrepreneurs connect apps, data and internet of things across the web to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars.</p>
     
       <div >
       <ul class="social-share-btns">
