--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <h3 class="project__name">Recommended tools to...</h3>
        <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
-              <h3 class="project__name">Live+Serve</h3>
+              <h3 class="project__name">Live+Evangelise</h3>
               <ul aria-label="Live and Worship" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://nlt.to" target="_blank" rel="nofollow"><img src="img/nlt_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://bibleproject.com" target="_blank" rel="nofollow"><img src="img/bibleproject_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
@@ -281,7 +281,7 @@
           
           <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
-              <h3 class="project__name">Build+Develop</h3>
+              <h3 class="project__name">Build+Launch</h3>
 	        <ul aria-label="Build and Develop" class="service__list" role="list">
                  <li class="service__list__item"><a href="https://python.org" target="_blank" rel="nofollow"><img  src="img/python_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
                 <li class="service__list__item"><a href="https://micropython.org" target="_blank" rel="nofollow"><img  src="img/micropython_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
