--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           
           <div class="what-we-do__services-layout__column">
             <section aria-label="3" class="service">
-              <h3 class="project__name">Learn+Teach</h3>
+              <h3 class="project__name">Learn+Teach K-12</h3>
               <ul aria-label="Learn and Teach" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://learn.saylor.org" target="_blank" rel="nofollow"><img src="img/saylor_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://www.aop.com/curriculum/horizons" target="_blank" rel="nofollow"><img src="img/aop_logo.svg" width="20%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
