We are Christian! Blessed with joy, peace and right-thinking.

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <li class="service__list__item"><a href="https://www.aop.com/curriculum/horizons" target="_blank" rel="nofollow"><img src="img/aop_logo.svg" width="20%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://www.khanacademy.org" target="_blank" rel="nofollow"><img src="img/khanacademy_logo.png" width="40%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://www.ck12.org" target="_blank" rel="nofollow"><img src="img/ck12_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-                <li class="service__list__item"><a href="https://www.readworks.org" target="_blank" rel="nofollow"><img src="img/readworks_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+                <li class="service__list__item"><a href="https://www.readworks.org" target="_blank" rel="nofollow"><img src="img/readworks_logo.svg" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
 		<li class="service__list__item"><a href="https://www.quill.org" target="_blank" rel="nofollow"><img src="img/quill_logo.png" width="18%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://readtheory.org" target="_blank" rel="nofollow"><img src="img/readtheory_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://storybird.com" target="_blank" rel="nofollow"><img src="img/storybird_logo.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
