--- a/pyspace.html
+++ b/pyspace.html
@@ -1,1 +1,2 @@
-<script src="https://py.space/embed/g/FSYN2BR2GZIG3FGN.js"></script>
+<script src="https://anvil.works/embed.js" async></script>
+<iframe style="width:100%" data-anvil-embed src="https://stupendous-sane-hornet.anvil.app/"></iframe>
