--- a/pyspace.html
+++ b/pyspace.html
@@ -1,2 +1,2 @@
 <script src="https://anvil.works/embed.js" async></script>
-<iframe style="width:100%" data-anvil-embed src="https://hangar49.anvil.app"></iframe>
+<iframe style="width:100%; height:100%;" data-anvil-embed src="https://hangar49.anvil.app"></iframe>
