--- a/pyspace.html
+++ b/pyspace.html
@@ -1,2 +1,2 @@
 <script type="module" src="https://unpkg.com/x-frame-bypass"></script>
-<iframe is="x-frame-bypass" style="width:100%; height:100%;" data-anvil-embed src="https://stupendous-sane-hornet.anvil.app"></iframe>
+<iframe is="x-frame-bypass" style="width:100%; height:100%;" src="https://stupendous-sane-hornet.anvil.app"></iframe>
