--- a/pyspace.html
+++ b/pyspace.html
@@ -1,2 +1,3 @@
-<script type="module" src="https://unpkg.com/x-frame-bypass"></script>
-<iframe is="x-frame-bypass" style="width:100%; height:100%;" src="https://stupendous-sane-hornet.anvil.app"></iframe>
+ <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./bypass.js" defer></script>
+<iframe bypass-x-frame="https://stupendous-sane-hornet.anvil.app"></iframe>
