--- a/pyspace.html
+++ b/pyspace.html
@@ -1,3 +1,3 @@
  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./bypass.js" defer></script>
+    <script src="./js/bypass.js" defer></script>
 <iframe bypass-x-frame="https://stupendous-sane-hornet.anvil.app"></iframe>
