--- a/pyspace.html
+++ b/pyspace.html
@@ -1,3 +1,1 @@
- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./js/bypass.js" defer></script>
-<iframe bypass-x-frame="https://stupendous-sane-hornet.anvil.app"></iframe>
+<script src="https://py.space/embed/g/FSYN2BR2GZIG3FGN.js"></script>
