--- a/pyspace.html
+++ b/pyspace.html
@@ -1,4 +1,8 @@
 <!doctype html>
 <html>
+  <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+</head>
 <script src="https://py.space/embed/g/FSYN2BR2GZIG3FGN.js"></script>
 </html>
