--- a/pyspace.html
+++ b/pyspace.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <meta charset="UTF-8">
-<meta http-equiv="Content-Security-Policy" content="default-src py.space 'unsafe-inline'">
+<meta http-equiv="Content-Security-Policy" content="default-src py.space">
 </head>
 <script src="https://py.space/embed/g/FSYN2BR2GZIG3FGN.js"></script>
 </html>
