--- a/pyspace.html
+++ b/pyspace.html
@@ -1,3 +1,7 @@
 
-<script src="https://py.space/embed/g/FSYN2BR2GZIG3FGN.js"></script>
+<script src="https://py.space/embed/g/FSYN2BR2GZIG3FGN.js">
+</script>
+<script>
+  document.querySelector('iframe').contentWindow.postMessage('text', '*');
+</script>
 
